add gazebo launch

--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/package.xml
@@ -11,12 +11,15 @@
 
   <author email="omarmon@uwaterloo.ca">Orson Marmon</author>
   <author email="melvin.mc.wang@gmail.com">Melvin Wang</author>
+  <author email="keyonjerome@gmail.com">Keyon Jerome</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>ros-galactic-ros2-control</exec_depend>
+  <exec_depend>gazebo_ros_pkgs</exec_depend>
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rviz2</exec_depend>
   <exec_depend>xacro</exec_depend>
