--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -9,6 +9,10 @@ RUN sudo apt update -y --no-install-recommends && sudo apt dist-upgrade -y
 # Ensure rosinstall and rosdep are installed and up to date
 RUN sudo apt install -y python3-rosdep
 
+# Install Gazebo Classic
+RUN curl -sSL http://get.gazebosim.org | sh
+
+
 # build via  docker build -f .\Dockerfile.dev -t uwrt_dev_image .
 # run via docker run --name uwrt_dev_container -e DISPLAY=host.docker.internal:0.0 -it -v uwrt_dev_image
 
