--- a/uwrt_mars_rover_vision/package.xml
+++ b/uwrt_mars_rover_vision/package.xml
@@ -21,6 +21,7 @@
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
   <depend>libopencv-dev</depend>
+  <depend>geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
