--- a/uwrt_mars_rover_utilities/CMakeLists.txt
+++ b/uwrt_mars_rover_utilities/CMakeLists.txt
@@ -13,10 +13,11 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(uwrt_mars_rover_hw_bridge REQUIRED)
 
 include_directories(include)
 
-add_subdirectory(lib/uwrt_mars_rover_hw_bridge)
+# add_subdirectory(lib/uwrt_mars_rover_hw_bridge)
 
 add_library(${PROJECT_NAME}
     src/uwrt_can.cpp
@@ -27,6 +28,7 @@ ament_target_dependencies(${PROJECT_NAME}
     rclcpp
     std_msgs
     rclcpp_components
+    uwrt_mars_rover_hw_bridge
 )
 
 add_executable(uwrt_can_test_node src/uwrt_can_test_node.cpp)
@@ -34,6 +36,7 @@ ament_target_dependencies(uwrt_can_test_node
     rclcpp
     std_msgs
     rclcpp_components
+    uwrt_mars_rover_hw_bridge
 )
 
 target_link_libraries(uwrt_can_test_node
@@ -50,12 +53,11 @@ install(TARGETS
 
 ament_export_include_directories(
     include
-    lib/uwrt_mars_rover_hw_bridge/include
 )
 
-ament_export_libraries(
-    uwrt-mars-rover-hw-bridge
-)
+# ament_export_libraries(
+#     uwrt_mars_rover_hw_bridge
+# )
 
 ament_export_dependencies(
     rclcpp
