complete aruco target tracker

--- a/uwrt_mars_rover_vision/CMakeLists.txt
+++ b/uwrt_mars_rover_vision/CMakeLists.txt
@@ -10,43 +10,6 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-
-# find_package(ZED 3 REQUIRED)
-# find_package(CUDA ${ZED_CUDA_VERSION} EXACT REQUIRED)
-
-
-# # ZED 3 reqs ----------------------------
-# # IF(NOT WIN32)
-# #     add_definitions(-Wno-format-extra-args)
-# #     SET(SPECIAL_OS_LIBS "pthread" "X11")
-# # ENDIF()
-
-# include_directories(${CUDA_INCLUDE_DIRS})
-# include_directories(${ZED_INCLUDE_DIRS})
-# # include_directories(${OpenCV_INCLUDE_DIRS})
-# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-# link_directories(${ZED_LIBRARY_DIR})
-# # link_directories(${OpenCV_LIBRARY_DIRS})
-# link_directories(${CUDA_LIBRARY_DIRS})
-
-# FILE(GLOB_RECURSE SRC_FILES src/*.cpp)
-# FILE(GLOB_RECURSE HDR_FILES include/*.hpp)
-
-# ADD_EXECUTABLE(${PROJECT_NAME} ${HDR_FILES} ${SRC_FILES})
-# add_definitions(-std=c++14 -O3)
-
-# # if (LINK_SHARED_ZED)
-# #     SET(ZED_LIBS ${ZED_LIBRARIES} ${CUDA_CUDA_LIBRARY} ${CUDA_CUDART_LIBRARY})
-# # else()
-# #     SET(ZED_LIBS ${ZED_STATIC_LIBRARIES} ${CUDA_CUDA_LIBRARY} ${CUDA_LIBRARY})
-# # endif()
-
-# TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ZED_LIBS} )
-# # ${OpenCV_LIBRARIES})
-# # end zed 3 reqs
-
-
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -54,20 +17,9 @@ find_package(std_msgs REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(image_transport REQUIRED)
-find_package(OpenCV REQUIRED COMPONENTS highgui imgcodecs imgproc videoio)
+find_package(OpenCV REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
-# add custom messages and services
-find_package(rosidl_default_generators REQUIRED)
-
-# set(msg_files
-# 	"msg/XboxController.msg"	
-# )
-
-# rosidl_generate_interfaces(${PROJECT_NAME}
-# 	${msg_files}
-# 	DEPENDENCIES std_msgs
-# )
 
 ament_export_dependencies(rosidl_default_runtime)
 
@@ -89,10 +41,8 @@ ament_target_dependencies(aruco_tracker
 	"cv_bridge"
 	"image_transport"
 	"geometry_msgs"
-	# "opencv_"
+	"OpenCV"
 	)
-# build ROS custom messages -> uncomment later
-# rosidl_target_interfaces(aruco_tracker ${PROJECT_NAME} "rosidl_typesupport_cpp")
 rclcpp_components_register_nodes(aruco_tracker "uwrt_autonomy::TargetTracker")
 set(node_plugins "${node_plugins}uwrt_autonomy::TargetTracker;$<TARGET_FILE:aruco_tracker>\n")
 
@@ -102,5 +52,11 @@ install(TARGETS
 	ARCHIVE DESTINATION lib
 	LIBRARY DESTINATION lib 
 	RUNTIME DESTINATION bin)
+
+# Install launch files.
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
 
 ament_package()
