add camera_calibration_parsers to package.xml

--- a/uwrt_mars_rover_science/dinolite/package.xml
+++ b/uwrt_mars_rover_science/dinolite/package.xml
@@ -15,6 +15,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>opencv2</depend>
+  <depend>camera_calibration_parsers</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
