--- a/uwrt_mars_rover_utilities/package.xml
+++ b/uwrt_mars_rover_utilities/package.xml
@@ -13,6 +13,7 @@
   <test_depend>ament_lint_common</test_depend>
 
   <depend>rclcpp</depend>
+  <depend>uwrt_mars_rover_hw_bridge</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
