--- a/uwrt_mars_rover_utils/uwrt_mars_rover_estop/package.xml
+++ b/uwrt_mars_rover_utils/uwrt_mars_rover_estop/package.xml
@@ -3,9 +3,10 @@
 <package format="3">
   <name>uwrt_mars_rover_estop</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="nafisfardin@gmail.com">nmolla</maintainer>
-  <license>TODO: License declaration</license>
+  <description>This is a package that allows the entire robots drivetrain system to be stopped in an instant</description>
+  <maintainer email="nafisfardin@gmail.com">Nafis Molla</maintainer>
+  
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
