add launch file

--- a/uwrt_mars_rover_utilities/CMakeLists.txt
+++ b/uwrt_mars_rover_utilities/CMakeLists.txt
@@ -49,6 +49,10 @@ install(TARGETS
     LIBRARY DESTINATION lib/${PROJECT_NAME}
 )
 
+install(DIRECTORY launch
+        DESTINATION share/${PROJECT_NAME}
+        )
+
 ament_export_include_directories(
     include
 )
