--- a/uwrt_msgs/package.xml
+++ b/uwrt_msgs/package.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>uwrt_mars_rover_utilities</name>
+  <name>uwrt_msgs</name>
   <version>0.0.0</version>
-  <description>Package including common utilities for uwrt_mars_rover (CAN library, etc.)</description>
-  <maintainer email="ctoft@uwaterloo.ca">Colin Toft</maintainer>
-  <license>MIT</license>
+  <description>TODO: Package description</description>
+  <maintainer email="cwt1078@gmail.com">uwrt-agx-xavier</maintainer>
+  <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-
-  <depend>rclcpp</depend>
-  <depend>uwrt_mars_rover_hw_bridge</depend>
-  <depend>std_msgs</depend>
-  <depend>uwrt_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
