--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/package.xml
@@ -20,6 +20,7 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>ros2_control</exec_depend>
   <exec_depend>gazebo_ros2_control</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>gazebo_ros_pkgs</exec_depend>
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rviz2</exec_depend>
