--- a/uwrt_msgs/CMakeLists.txt
+++ b/uwrt_msgs/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 set(msg_files
   "msg/SetVel.msg"
+  "msg/XboxController.msg"
 )
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_files}
