--- a/uwrt_mars_rover_utilities/package.xml
+++ b/uwrt_mars_rover_utilities/package.xml
@@ -17,6 +17,7 @@
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>uwrt_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
