--- a/uwrt_mars_rover_led_matrix/package.xml
+++ b/uwrt_mars_rover_led_matrix/package.xml
@@ -3,14 +3,18 @@
 <package format="3">
   <name>uwrt_mars_rover_led_matrix</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="skhanna@versa-networks.com">root</maintainer>
-  <license>TODO: License declaration</license>
+  <description></description>
+  <maintainer email="">root</maintainer>
+  <license></license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
+
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>ros2launch</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
