--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/config/drivetrain_controllers.yaml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/config/drivetrain_controllers.yaml
@@ -12,6 +12,8 @@ differential_drivetrain_controller:
   ros__parameters:
     left_wheel_names: [ "left_front_wheel_joint", "left_middle_wheel_joint", "left_back_wheel_joint" ]
     right_wheel_names: [ "right_front_wheel_joint", "right_middle_wheel_joint", "right_back_wheel_joint" ]
+    # left_wheel_names: [ "left_middle_wheel_joint"]
+    # right_wheel_names: []
 
     # Should match values defined in uwrt_mars_rover_drivetrain_description's generated urdf
     wheel_separation: 0.997 # wheelbase_length = chassis_width + wheel_width
@@ -38,7 +40,7 @@ differential_drivetrain_controller:
 
     cmd_vel_timeout: 0.2 # seconds. min cmd_vel publish rate is 5Hz
     publish_limited_velocity: true
-    use_stamped_vel: true
+    use_stamped_vel: false # FIXME (npalmar): chaneg back to true
     velocity_rolling_window_size: 10
 
     # Velocity and acceleration limits
