--- a/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_urdf_moveit/config/moveit_controllers.yaml
+++ b/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_urdf_moveit/config/moveit_controllers.yaml
@@ -1,6 +1,11 @@
 # MoveIt uses this configuration for controller management
+trajectory_execution:
+  allowed_execution_duration_scaling: 1.2
+  allowed_goal_duration_margin: 0.5
+  allowed_start_tolerance: 0.01
+  trajectory_duration_monitoring: true
 
-moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControllerManager
+moveit_controller_manager: moveit_ros_control_interface/MoveItControllerManager
 
 moveit_simple_controller_manager:
   controller_names:
@@ -8,6 +13,8 @@ moveit_simple_controller_manager:
     - gripper_controller
 
   uwrt_arm_controller:
+    default: true
+    action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     joints:
       - Joint_1
@@ -17,6 +24,6 @@ moveit_simple_controller_manager:
       - Joint_5
       - Joint_6
   gripper_controller:
-    type: FollowJointTrajectory
+    type: GripperCommand
     joints:
       - Joint_6
