--- a/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_urdf_moveit/package.xml
+++ b/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_urdf_moveit/package.xml
@@ -48,7 +48,10 @@
 
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
-  <depend>geometry_msgs></depend>
+  <depend>geometry_msgs</depend>
+  <depend>action_msgs</depend>
+  <depend>moveit_ros_planning</depend>
+  <depend>moveit_ros_planning_interface</depend>
 
   <test_depend>ament_cmake_cppcheck</test_depend>
   <test_depend>ament_cmake_clang_format</test_depend>
