add back launch and config gen folders in CMAKELIST

--- a/uwrt_mars_rover_navigation/vectornav/CMakeLists.txt
+++ b/uwrt_mars_rover_navigation/vectornav/CMakeLists.txt
@@ -48,8 +48,8 @@ install(
   RUNTIME DESTINATION bin
 )
 
-install( DIRECTORY
-  # config launch
+install(
+  DIRECTORY config launch
   DESTINATION share/${PROJECT_NAME}
 )
 
