--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/config/drivetrain_controllers.yaml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/config/drivetrain_controllers.yaml
@@ -38,7 +38,7 @@ differential_drivetrain_controller:
 
     cmd_vel_timeout: 0.2 # seconds. min cmd_vel publish rate is 5Hz
     publish_limited_velocity: true
-    use_stamped_vel: true
+    use_stamped_vel: false # FIXME (npalmar): chaneg back to true
     velocity_rolling_window_size: 10
 
     # Velocity and acceleration limits
