--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
@@ -11,6 +11,8 @@
 
   <author email="omarmon@uwaterloo.ca">Orson Marmon</author>
   <author email="melvin.mc.wang@gmail.com">Melvin Wang</author>
+  <author email="nmolla@uwaterloo.ca">Nafis Molla</author>
+
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
