--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,9 +6,9 @@
 		// Sets the run context to one level up instead of the .devcontainer folder.
 		"context": "..",
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-		"dockerfile": "../Dockerfile.dev"
+		"dockerfile": "../Dockerfile.jetson"
 	},
-	"containerEnv": { "DISPLAY": "host.docker.internal:0.0" }
+	"containerEnv": { "DISPLAY": "host.docker.internal:0.0" },
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -21,7 +21,12 @@
 
 	// Configure tool-specific properties.
 	// "customizations": {},
-
+	
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "devcontainer"
+
+	// Build arguments to pass to the CLI
+
+	"runArgs":["--runtime=nvidia", "--rm" , "--network=host"]
+
 }
