--- a/Dockerfile.jetson
+++ b/Dockerfile.jetson
@@ -1,13 +1,13 @@
 # Start with the desktop ROS Humble 20.04 image
-FROM osrf/ros:humble-desktop
+FROM dustynv/ros:humble-desktop-l4t-r35.1.0
 
 # This dockerfile assumes you'll share your development folder from your computer over to the container,
 # so we don't do `rosdep install` for you, or clone the repository.
 
 # update everything
-RUN sudo apt update -y --no-install-recommends && sudo apt dist-upgrade -y 
+# RUN apt-get update && apt-get install -y --no-install-recommends make g++
 # Ensure rosinstall and rosdep are installed and up to date
-RUN sudo apt install -y python3-rosdep
+RUN sudo apt-get install -y python3-rosdep
 
 # build via  docker build -f .\Dockerfile.dev -t uwrt_dev_image .
 # run via docker run --name uwrt_dev_container -e DISPLAY=host.docker.internal:0.0 -it -v uwrt_dev_image
