--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
@@ -38,6 +38,9 @@
   <test_depend>ament_cmake_flake8</test_depend>
   <test_depend>ament_cmake_xmllint</test_depend>
 
+  <exec_depend>nav2_msgs</exec_depend>
+  <exec_depend>nav2_core</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
